# COSC410-2025-TicTacToe

./: README.md
backend/: pyproject.toml
backend/app/tictactoe/: engine.py  router.py  schemas.py
backend/tests/: test_tictactoe_api.py  test_tictactoe_engine.py
frontend/: index.html  package.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.css  App.tsx
frontend/src/__tests__/: App.test.tsx  TicTacToe.test.tsx
frontend/src/components/: TicTacToe.tsx
